remove mybatis